--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="14" />
 
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.NFC" /> 
 
     <application
         android:allowBackup="true"
